[package]
name = "lcos"
version = "0.1.0"
authors = ["LiuZhen <1204736871@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.12"
volatile = "0.2.6"
spin = "0.4.9"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# 这里要设置成让bootimage调用xbuild 不然默认调用build
[package.metadata.bootimage]
build-command = ["xbuild"]
run-command = ["qemu-system-x86_64.exe", "-L", "E:/qemu", "-drive", "format=raw,file={}"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # 0x10 << 1 | 1